# nanodjango-wagtail

./: .gitignore  README.md  main.py  nanotail.py  pyproject.toml
examples/: hooks.py
examples/templates/main/: content_page.html
nanodjango_wagtail/: nanodjango.py
templates/main/: home_page.html
