[project]
name = "nanodjango-wagtail"
version = "0.1.0"
description = "Nanodjango plugin for single-file Wagtail apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nanodjango>=0.16.3",
    "wagtail>=7.4",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nanodjango_wagtail"
module-root = ""

[project.entry-points.nanodjango]
nanodjango_wagtail = "nanodjango_wagtail.nanodjango"